<resources>
    <string name="app_name">Sale Clothes Application</string>
    <string name="cover_img">Ảnh bìa</string>
    <string name="Sale">Sale</string>
    <string name="Clothes">Clothes</string>
    <string name="Email_title">Email:</string>
    <string name="Password_title">Mật khẩu:</string>
    <string name="Login">Đăng nhập</string>
    <string name="do_not_have_account">Bạn chưa có tài khoản?</string>
    <string name="Logup">Đăng kí</string>
    <string name="Confirm_password_title">Xác nhận mật khẩu</string>
    <string name="Filter">Lọc</string>
    <string name="Filter_by_title">Lọc theo:</string>
    <string name="All">Tất cả</string>
    <string name="Highest_price">Giá cao nhất</string>
    <string name="Lowest_price">Giá thấp nhất</string>
    <string name="Clothes_img">Ảnh quần áo</string>
    <string name="Clothes_name">Tên quần áo</string>
    <string name="Group_title">Dành cho:</string>
    <string name="Group_regex">Dành cho: %s</string>
    <string name="Color_title">Màu:</string>
    <string name="Clothes_color">Màu quần áo</string>
    <string name="Price_regex">%s đ</string>
    <string name="Homepage">Trang chủ</string>
    <string name="Cart">Giỏ hàng</string>
    <string name="Order">Đơn hàng</string>
    <string name="Account">Tài khoản</string>
    <string name="Back">Trở về</string>
    <string name="Description_title">Mô tả:</string>
    <string name="Size_title">Size:</string>
    <string name="Add_cart">Thêm giỏ hàng</string>
    <string name="Cancel_add_cart">Hủy thêm</string>
    <string name="Remove_clothes">Xóa quần áo</string>
    <string name="Create_bill">Tạo đơn hàng</string>
    <string name="Quantity_regex">x%d</string>
    <string name="Size_regex">Size: %s</string>
    <string name="Confirm_delete_cart">Xác nhận xóa đơn hàng</string>
    <string name="Bill">Thanh toán</string>
    <string name="Create_order">Tạo đơn hàng</string>
    <string name="List_clothes_in_bill">Danh sách thanh toán</string>
    <string name="Location_info">Thông tin nhận hàng</string>
    <string name="Payment_detail">Chi tiết thanh toán</string>
    <string name="Total_money_title">Tổng thanh toán:</string>
    <string name="Ship_money_title">Phí vận chuyển:</string>
    <string name="Clothes_info_regex">%s, size %s, màu %s</string>
    <string name="Order_id_regex">Đơn hàng #%s</string>
    <string name="Total_clothes_value">Tổng giá trị quần áo:</string>
    <string name="Order_state">Tình trạng đơn hàng</string>
    <string name="Display_list">Hiển thị danh sách</string>
    <string name="State">Trạng thái</string>
    <string name="Wait_handle">Chờ\nxử lí</string>
    <string name="Exit_storage">Đã xuất\nkho</string>
    <string name="Shipping">Đang vận\nchuyển</string>
    <string name="Come_address">Đã tới\nnơi</string>
    <string name="Paid">Đã thanh\ntoán</string>
    <string name="User_img">Ảnh người dùng</string>
    <string name="Phone">Số điện thoại</string>
    <string name="Address">Địa chỉ</string>
    <string name="Email">Email</string>
    <string name="Change_password">Thay đổi mật khẩu</string>
    <string name="Edit_info">Chỉnh sửa thông tin</string>
    <string name="Logout">Đăng xuất</string>
    <string name="Name_title">Tên:</string>
    <string name="Address_title">Địa chỉ:</string>
    <string name="Phone_title">Số điện thoại:</string>
    <string name="Clothes_group">Đối tượng sử dụng</string>
    <string name="Sell_title">Đã bán:</string>
    <string name="Comment_title">Bình luận:</string>
    <string name="Star">Sao</string>
    <string name="Comment_value_regex">: %d bình luận.</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="Favorite">Sở thích</string>
    <string name="Dont_have_comment">Không có bình luận</string>
    <string name="Quantity">Số lượng</string>
    <string name="Quantity_title">"Số lượng: "</string>
    <string name="plus">+</string>
    <string name="sub">-</string>
    <string name="Sum_title">"Tổng: "</string>
    <string name="Receiver_phone_regex"><![CDATA[<b>Số điện thoại:</b> %s]]></string>
    <string name="Receiver_address_regex"><![CDATA[<b>Địa chỉ:</b> %s]]></string>
    <string name="Money">Tiền mặt</string>
    <string name="logo">Biểu tượng ứng dụng</string>
    <string name="Total_comments_reqex"><![CDATA[<b><font color="#1b67ff">Bình luận: </font></b><font color="#000000">%s bình luận.</font>]]></string>
</resources>