<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainVM"
            type="com.locnguyen.saleclothesapplication.viewmodel.MainVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/img_space"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/User_img"
                android:scaleType="centerInside"
                tool:src="@drawable/clothes_ex" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:ellipsize="end"
            android:fontFamily="@font/tinos_bold"
            android:lines="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_space"
            app:layout_constraintTop_toTopOf="@id/img_space"
            tool:text="Tên người dùng" />

        <ImageView
            android:id="@+id/ic_phone"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/Phone"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_phone"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@id/ic_phone"
            app:layout_constraintEnd_toEndOf="@id/name"
            app:layout_constraintStart_toEndOf="@id/ic_phone"
            app:layout_constraintTop_toTopOf="@id/ic_phone"
            tool:text="Số điện thoại" />

        <ImageView
            android:id="@+id/ic_address"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/Address"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_location_blue"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/ic_phone" />

        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@id/ic_address"
            app:layout_constraintEnd_toEndOf="@id/name"
            app:layout_constraintStart_toEndOf="@id/ic_address"
            app:layout_constraintTop_toTopOf="@id/ic_address"
            tool:text="Địa chỉ" />

        <ImageView
            android:id="@+id/ic_email"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/Email"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_email"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/ic_address" />

        <TextView
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@id/ic_email"
            app:layout_constraintEnd_toEndOf="@id/name"
            app:layout_constraintStart_toEndOf="@id/ic_email"
            app:layout_constraintTop_toTopOf="@id/ic_email"
            tool:text="Email" />

        <LinearLayout
            android:id="@+id/editInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:onClick="@{() -> mainVM.editInfo()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_space">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/Edit_info"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_edit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/Edit_info"
                android:textColor="@color/black"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:onClick="@{() -> mainVM.logout()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editInfo">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/Logout"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_log_out" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/Logout"
                android:textColor="@color/black"
                android:textSize="13sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>